--- a/f.html
+++ b/f.html
@@ -1,7 +1,13 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Hello, World! My name is Aleksandra.</h1>
-  </body>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Заголовок страницы для браузера</title>
+  <link rel="stylesheet" href="/style.css" type="text/css" />
+ </head>
+ <body>
+  <h1>Приветствие</h1>
+  <!-- Комментарий -->
+  <p>Имя.</p>
+   
+ </body>
 </html>
