--- a/f.html
+++ b/f.html
@@ -7,7 +7,7 @@
  <body>
   <h1>Приветствие, вступительное слово</h1>
   <!-- Комментарий -->
-  <p>ФИО.</p>
+  <p>ФИО и дата.</p>
 <p>hjhjhj</p>
    
  </body>
